removed deprecated call (reflection)